# naboscale

./: .gitignore  Cargo.toml  README.md  naboscale-coord.sqlite
.github/workflows/: ci.yml
crates/naboscale-cli/: Cargo.toml
crates/naboscale-cli/src/: cli.rs  client.rs  config.rs  error.rs  identity.rs  keystore.rs  lib.rs  main.rs  platform.rs  state.rs
crates/naboscale-coord/: Cargo.toml
crates/naboscale-coord/src/: auth.rs  db.rs  error.rs  ip_alloc.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  server.rs  state.rs
crates/naboscale-coord/tests/: server_test.rs
crates/naboscale-crypto/: Cargo.toml
crates/naboscale-crypto/src/: error.rs  handshake.rs  identity.rs  keys.rs  lib.rs  mac.rs  timestamp.rs  transport.rs
crates/naboscale-crypto/tests/: anti_replay_test.rs  framing_test.rs  handshake_test.rs  identity_test.rs  transport_test.rs
crates/naboscale-proto/: Cargo.toml
crates/naboscale-proto/src/: lib.rs
crates/naboscale-proto/src/message/: types.rs
crates/naboscale-tunnel/: Cargo.toml
crates/naboscale-tunnel/src/: device.rs  error.rs  lib.rs  manager.rs  transport.rs
crates/naboscale-tunnel/tests/: device_test.rs  manager_test.rs
scripts/: .deploy.conf.example  README.md  deploy-mesh.sh  naboscale-coord.service  test-all.sh  test-mesh.sh
