[workspace]
resolver = "2"
members = [
    "crates/naboscale-crypto",
    "crates/naboscale-tunnel",
    "crates/naboscale-coord",
    "crates/naboscale-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["adria"]

[workspace.dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
thiserror = "1"
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
subtle = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
hex = "0.4"
naboscale-crypto = { path = "crates/naboscale-crypto" }
naboscale-tunnel = { path = "crates/naboscale-tunnel" }
tun = "0.7"
bytes = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
toml = "0.8"
naboscale-coord = { path = "crates/naboscale-coord" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
