[package]
name = "naboscale-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line client for naboscale: register with coord server, run tunnel daemon, manage identity"

[[bin]]
name = "naboscale"
path = "src/main.rs"

[dependencies]
naboscale-crypto = { workspace = true }
naboscale-tunnel = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4"
