[package]
name = "naboscale-coord"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Coordination server for naboscale: registers nodes, allocates IPs, serves peer lists"

[[bin]]
name = "naboscale-coord"
path = "src/main.rs"

[dependencies]
naboscale-crypto = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full", "test-util"] }
naboscale-crypto = { workspace = true }
